// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Factory  > Factory will create instance and collect metadata 1`] = `
[
  {
    "define": {},
    "guards": [],
    "header": {},
    "interceptors": [],
    "method": "test",
    "middlewares": [],
    "name": "A",
    "params": [
      {
        "index": 0,
        "key": "id",
        "type": "query",
        "validate": undefined,
      },
      {
        "index": 1,
        "key": "name",
        "type": "body",
        "validate": undefined,
      },
    ],
    "route": {
      "route": "/base/test",
      "type": "get",
    },
    "tag": "A",
  },
]
`;

exports[`Factory  > In extended case 1`] = `
[
  {
    "define": {},
    "guards": [],
    "header": {},
    "interceptors": [],
    "method": "test2",
    "middlewares": [],
    "name": "B",
    "params": [
      {
        "index": 0,
        "key": "id",
        "type": "query",
        "validate": undefined,
      },
      {
        "index": 1,
        "key": "name",
        "type": "body",
        "validate": undefined,
      },
    ],
    "route": {
      "route": "/B/testB",
      "type": "get",
    },
    "tag": "B",
  },
  {
    "define": {},
    "guards": [],
    "header": {},
    "interceptors": [],
    "method": "test",
    "middlewares": [],
    "name": "B",
    "params": [
      {
        "index": 0,
        "key": "id",
        "type": "query",
        "validate": undefined,
      },
      {
        "index": 1,
        "key": "name",
        "type": "body",
        "validate": undefined,
      },
    ],
    "route": {
      "route": "/B/testA",
      "type": "get",
    },
    "tag": "B",
  },
]
`;

exports[`Factory  > multple class extends the same class 1`] = `
[
  {
    "define": {},
    "guards": [],
    "header": {},
    "interceptors": [],
    "method": "test2",
    "middlewares": [],
    "name": "B",
    "params": [
      {
        "index": 0,
        "key": "id",
        "type": "query",
        "validate": undefined,
      },
      {
        "index": 1,
        "key": "name",
        "type": "body",
        "validate": undefined,
      },
    ],
    "route": {
      "route": "/B/testB",
      "type": "get",
    },
    "tag": "B",
  },
  {
    "define": {},
    "guards": [],
    "header": {},
    "interceptors": [],
    "method": "test",
    "middlewares": [],
    "name": "B",
    "params": [
      {
        "index": 0,
        "key": "id",
        "type": "query",
        "validate": undefined,
      },
      {
        "index": 1,
        "key": "name",
        "type": "body",
        "validate": undefined,
      },
    ],
    "route": {
      "route": "/B/testA",
      "type": "get",
    },
    "tag": "B",
  },
  {
    "define": {},
    "guards": [],
    "header": {},
    "interceptors": [],
    "method": "test3",
    "middlewares": [],
    "name": "C",
    "params": [
      {
        "index": 0,
        "key": "id",
        "type": "query",
        "validate": undefined,
      },
      {
        "index": 1,
        "key": "name",
        "type": "body",
        "validate": undefined,
      },
    ],
    "route": {
      "route": "/C/testC",
      "type": "get",
    },
    "tag": "C",
  },
  {
    "define": {},
    "guards": [],
    "header": {},
    "interceptors": [],
    "method": "test",
    "middlewares": [],
    "name": "C",
    "params": [
      {
        "index": 0,
        "key": "id",
        "type": "query",
        "validate": undefined,
      },
      {
        "index": 1,
        "key": "name",
        "type": "body",
        "validate": undefined,
      },
    ],
    "route": {
      "route": "/C/testA",
      "type": "get",
    },
    "tag": "C",
  },
]
`;
